err2.txt
(node:11096) Warning: Failed to load the ES module: D:\MSEED 4 portals\script.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
D:\MSEED 4 portals\script.js:11
import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0
